--- a/project/index.html
+++ b/project/index.html
@@ -539,9 +539,7 @@
         
         <p>
           
-          Powered by
-          <a href="https://themefisher.com" target="_blank" rel="noopener">themefisher</a> for
-          <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
+          Luca Garbi &#169  -  You can contact me at lucagarbi2@gmail.com
         </p>
       </div>
       <div class="col-md-6">
@@ -553,6 +551,7 @@
     </div>
   </div>
 </footer>
+
   </div>
   
 
