--- a/project/mc-qmc/index.html
+++ b/project/mc-qmc/index.html
@@ -754,9 +754,7 @@ Both codes, in C language, are present in Appendix.</p>
         
         <p>
           
-          Powered by
-          <a href="https://themefisher.com" target="_blank" rel="noopener">themefisher</a> for
-          <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
+          Luca Garbi &#169  -  You can contact me at lucagarbi2@gmail.com
         </p>
       </div>
       <div class="col-md-6">
@@ -768,6 +766,7 @@ Both codes, in C language, are present in Appendix.</p>
     </div>
   </div>
 </footer>
+
   </div>
   
 
