--- a/talk/index.html
+++ b/talk/index.html
@@ -844,9 +844,7 @@
         
         <p>
           
-          Powered by
-          <a href="https://themefisher.com" target="_blank" rel="noopener">themefisher</a> for
-          <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
+          Luca Garbi &#169  -  You can contact me at lucagarbi2@gmail.com
         </p>
       </div>
       <div class="col-md-6">
@@ -858,6 +856,7 @@
     </div>
   </div>
 </footer>
+
   </div>
   
 
