--- a/404.html
+++ b/404.html
@@ -303,7 +303,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/CV_Garbi%20Luca.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/files/CV%20Garbi%20Luca.pdf"><span>CV</span></a>
         </li>
 
         
