--- a/privacy/index.html
+++ b/privacy/index.html
@@ -304,7 +304,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/CV_Garbi%20Luca.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/files/CV%20Garbi%20Luca.pdf"><span>CV</span></a>
         </li>
 
         
