--- a/project/sam-sam/index.html
+++ b/project/sam-sam/index.html
@@ -374,6 +374,18 @@
 
   
   
+  
+  
+  <div>
+    
+
+
+
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Luca Garbi</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/andrea-bugna/">Andrea Bugna</a></span>
+
+  </div>
+  
+  
 
   
   <span class="article-date">
@@ -535,6 +547,10 @@ Numerical and graphical simulations of the chaotic system are made and the Lyapu
 
 
 
+  
+  
+    
+  
   
 
 
