--- a/project/bachelor-thesis/index.html
+++ b/project/bachelor-thesis/index.html
@@ -374,6 +374,18 @@
 
   
   
+  
+  
+  <div>
+    
+
+
+
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Luca Garbi</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/andrea-bugna/">Andrea Bugna</a></span>
+
+  </div>
+  
+  
 
   
   <span class="article-date">
@@ -584,6 +596,10 @@ heralded signal in the mid infrared.</p>
 
 
 
+  
+  
+    
+  
   
 
 
